// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`adminDeleteIssue emits delete issue on success 1`] = `
Array [
  Array [
    Object {
      "request": Object {
        "headers": Object {
          "cookie": Object {
            "passwordHash": "hashy",
          },
        },
        "user": Object {
          "_id": "123",
          "completedRegistration": true,
          "genfors": "1",
          "logged_in": true,
          "name": "Namy",
          "onlinewebId": "123",
          "permissions": 10,
        },
      },
    },
    "CLOSE_ISSUE",
    Object {
      "_id": "1",
      "active": false,
      "countingBlankVotes": false,
      "deleted": true,
      "description": "Description goes here",
      "genfors": "1",
      "options": Array [
        Object {
          "id": "1",
          "text": "Blank",
        },
        Object {
          "id": "2",
          "text": "Yes",
        },
        Object {
          "id": "3",
          "text": "No",
        },
      ],
      "secret": false,
      "showOnlyWinner": false,
      "toObject": [Function],
      "voteDemand": "regular",
      "votes": Object {
        "1": Object {
          "_id": "1",
          "option": "3",
          "question": "1",
          "user": "1",
        },
        "2": Object {
          "_id": "2",
          "option": "3",
          "question": "1",
          "user": "1",
        },
        "3": Object {
          "_id": "3",
          "option": "3",
          "question": "1",
          "user": "1",
        },
        "4": Object {
          "_id": "4",
          "option": "3",
          "question": "1",
          "user": "1",
        },
      },
      "winner": "3",
    },
  ],
  Array [
    Object {
      "request": Object {
        "headers": Object {
          "cookie": Object {
            "passwordHash": "hashy",
          },
        },
        "user": Object {
          "_id": "123",
          "completedRegistration": true,
          "genfors": "1",
          "logged_in": true,
          "name": "Namy",
          "onlinewebId": "123",
          "permissions": 10,
        },
      },
    },
    "DELETED_ISSUE",
    Object {
      "_id": "1",
      "active": false,
      "countingBlankVotes": false,
      "deleted": true,
      "description": "Description goes here",
      "genfors": "1",
      "options": Array [
        Object {
          "id": "1",
          "text": "Blank",
        },
        Object {
          "id": "2",
          "text": "Yes",
        },
        Object {
          "id": "3",
          "text": "No",
        },
      ],
      "secret": false,
      "showOnlyWinner": false,
      "toObject": [Function],
      "voteDemand": "regular",
      "votes": Object {
        "1": Object {
          "_id": "1",
          "option": "3",
          "question": "1",
          "user": "1",
        },
        "2": Object {
          "_id": "2",
          "option": "3",
          "question": "1",
          "user": "1",
        },
        "3": Object {
          "_id": "3",
          "option": "3",
          "question": "1",
          "user": "1",
        },
        "4": Object {
          "_id": "4",
          "option": "3",
          "question": "1",
          "user": "1",
        },
      },
      "winner": "3",
    },
  ],
]
`;

exports[`adminDeleteIssue emits delete issue on success 2`] = `
Array [
  Array [
    Object {
      "request": Object {
        "headers": Object {
          "cookie": Object {
            "passwordHash": "hashy",
          },
        },
        "user": Object {
          "_id": "123",
          "completedRegistration": true,
          "genfors": "1",
          "logged_in": true,
          "name": "Namy",
          "onlinewebId": "123",
          "permissions": 10,
        },
      },
    },
    "DISABLE_VOTING",
  ],
  Array [
    Object {
      "request": Object {
        "headers": Object {
          "cookie": Object {
            "passwordHash": "hashy",
          },
        },
        "user": Object {
          "_id": "123",
          "completedRegistration": true,
          "genfors": "1",
          "logged_in": true,
          "name": "Namy",
          "onlinewebId": "123",
          "permissions": 10,
        },
      },
    },
    "CLOSE_ISSUE",
    Object {
      "_id": "1",
      "active": false,
      "countingBlankVotes": false,
      "deleted": true,
      "description": "Description goes here",
      "genfors": "1",
      "options": Array [
        Object {
          "id": "1",
          "text": "Blank",
        },
        Object {
          "id": "2",
          "text": "Yes",
        },
        Object {
          "id": "3",
          "text": "No",
        },
      ],
      "secret": false,
      "showOnlyWinner": false,
      "toObject": [Function],
      "voteDemand": "regular",
    },
  ],
  Array [
    Object {
      "request": Object {
        "headers": Object {
          "cookie": Object {
            "passwordHash": "hashy",
          },
        },
        "user": Object {
          "_id": "123",
          "completedRegistration": true,
          "genfors": "1",
          "logged_in": true,
          "name": "Namy",
          "onlinewebId": "123",
          "permissions": 10,
        },
      },
    },
    "DELETED_ISSUE",
    Object {
      "_id": "1",
      "active": false,
      "countingBlankVotes": false,
      "deleted": true,
      "description": "Description goes here",
      "genfors": "1",
      "options": Array [
        Object {
          "id": "1",
          "text": "Blank",
        },
        Object {
          "id": "2",
          "text": "Yes",
        },
        Object {
          "id": "3",
          "text": "No",
        },
      ],
      "secret": false,
      "showOnlyWinner": false,
      "toObject": [Function],
      "voteDemand": "regular",
      "votes": Object {
        "1": Object {
          "_id": "1",
          "option": "3",
          "question": "1",
          "user": "1",
        },
        "2": Object {
          "_id": "2",
          "option": "3",
          "question": "1",
          "user": "1",
        },
        "3": Object {
          "_id": "3",
          "option": "3",
          "question": "1",
          "user": "1",
        },
        "4": Object {
          "_id": "4",
          "option": "3",
          "question": "1",
          "user": "1",
        },
      },
      "winner": "3",
    },
  ],
]
`;

exports[`closeIssue emits close issue action and disables voting 1`] = `
Array [
  Array [
    Object {
      "request": Object {
        "headers": Object {
          "cookie": Object {
            "passwordHash": "hashy",
          },
        },
        "user": Object {
          "_id": "123",
          "completedRegistration": true,
          "genfors": "1",
          "logged_in": true,
          "name": "Namy",
          "onlinewebId": "123",
          "permissions": 10,
        },
      },
    },
    "CLOSE_ISSUE",
    Object {
      "_id": "1",
      "active": false,
      "countingBlankVotes": false,
      "description": "Description goes here",
      "genfors": "1",
      "options": Array [
        Object {
          "id": "1",
          "text": "Blank",
        },
        Object {
          "id": "2",
          "text": "Yes",
        },
        Object {
          "id": "3",
          "text": "No",
        },
      ],
      "secret": false,
      "showOnlyWinner": false,
      "toObject": [Function],
      "voteDemand": "regular",
      "votes": Object {
        "1": Object {
          "_id": "1",
          "option": "3",
          "question": "1",
          "user": "1",
        },
        "2": Object {
          "_id": "2",
          "option": "3",
          "question": "1",
          "user": "1",
        },
        "3": Object {
          "_id": "3",
          "option": "3",
          "question": "1",
          "user": "1",
        },
        "4": Object {
          "_id": "4",
          "option": "3",
          "question": "1",
          "user": "1",
        },
      },
      "winner": "3",
    },
  ],
]
`;

exports[`closeIssue emits close issue action and disables voting 2`] = `
Array [
  Array [
    Object {
      "request": Object {
        "headers": Object {
          "cookie": Object {
            "passwordHash": "hashy",
          },
        },
        "user": Object {
          "_id": "123",
          "completedRegistration": true,
          "genfors": "1",
          "logged_in": true,
          "name": "Namy",
          "onlinewebId": "123",
          "permissions": 10,
        },
      },
    },
    "DISABLE_VOTING",
  ],
  Array [
    Object {
      "request": Object {
        "headers": Object {
          "cookie": Object {
            "passwordHash": "hashy",
          },
        },
        "user": Object {
          "_id": "123",
          "completedRegistration": true,
          "genfors": "1",
          "logged_in": true,
          "name": "Namy",
          "onlinewebId": "123",
          "permissions": 10,
        },
      },
    },
    "CLOSE_ISSUE",
    Object {
      "_id": "1",
      "active": false,
      "countingBlankVotes": false,
      "description": "Description goes here",
      "genfors": "1",
      "options": Array [
        Object {
          "id": "1",
          "text": "Blank",
        },
        Object {
          "id": "2",
          "text": "Yes",
        },
        Object {
          "id": "3",
          "text": "No",
        },
      ],
      "secret": false,
      "showOnlyWinner": false,
      "toObject": [Function],
      "voteDemand": "regular",
      "votes": Object {
        "1": Object {
          "_id": "1",
          "option": "3",
          "question": "1",
          "user": "1",
        },
        "2": Object {
          "_id": "2",
          "option": "3",
          "question": "1",
          "user": "1",
        },
        "3": Object {
          "_id": "3",
          "option": "3",
          "question": "1",
          "user": "1",
        },
        "4": Object {
          "_id": "4",
          "option": "3",
          "question": "1",
          "user": "1",
        },
      },
      "winner": "3",
    },
  ],
]
`;

exports[`closeIssue emits error when it fails 1`] = `
Array [
  Array [
    Object {
      "request": Object {
        "headers": Object {
          "cookie": Object {
            "passwordHash": "hashy",
          },
        },
        "user": Object {
          "_id": "123",
          "completedRegistration": true,
          "genfors": "1",
          "logged_in": true,
          "name": "Namy",
          "onlinewebId": "123",
          "permissions": 5,
        },
      },
    },
    "issue",
    Object {},
    Object {
      "error": "Closing issue failed",
    },
  ],
]
`;

exports[`createIssue emits OPEN_ISSUE action creates issue 1`] = `
Array [
  Array [
    Object {
      "request": Object {
        "headers": Object {
          "cookie": Object {
            "passwordHash": "hashy",
          },
        },
        "user": Object {
          "_id": "123",
          "completedRegistration": true,
          "genfors": "1",
          "logged_in": true,
          "name": "Namy",
          "onlinewebId": "123",
          "permissions": 5,
        },
      },
    },
    "OPEN_ISSUE",
    Object {
      "_id": "1",
      "active": true,
      "countingBlankVotes": false,
      "description": "Description goes here",
      "genfors": "1",
      "options": Array [
        Object {
          "id": "1",
          "text": "Blank",
        },
        Object {
          "id": "2",
          "text": "Yes",
        },
        Object {
          "id": "3",
          "text": "No",
        },
      ],
      "secret": false,
      "showOnlyWinner": false,
      "toObject": [Function],
      "voteDemand": "regular",
    },
    Object {
      "action": "open",
    },
  ],
]
`;

exports[`createIssue emits OPEN_ISSUE action creates issue 2`] = `
Array [
  Array [
    Object {
      "request": Object {
        "headers": Object {
          "cookie": Object {
            "passwordHash": "hashy",
          },
        },
        "user": Object {
          "_id": "123",
          "completedRegistration": true,
          "genfors": "1",
          "logged_in": true,
          "name": "Namy",
          "onlinewebId": "123",
          "permissions": 5,
        },
      },
    },
    "OPEN_ISSUE",
    Object {
      "_id": "1",
      "active": true,
      "countingBlankVotes": false,
      "description": "Description goes here",
      "genfors": "1",
      "options": Array [
        Object {
          "id": "1",
          "text": "Blank",
        },
        Object {
          "id": "2",
          "text": "Yes",
        },
        Object {
          "id": "3",
          "text": "No",
        },
      ],
      "secret": false,
      "showOnlyWinner": false,
      "toObject": [Function],
      "voteDemand": "regular",
    },
    Object {
      "action": "open",
    },
  ],
  Array [
    Object {
      "request": Object {
        "headers": Object {
          "cookie": Object {
            "passwordHash": "hashy",
          },
        },
        "user": Object {
          "_id": "123",
          "completedRegistration": true,
          "genfors": "1",
          "logged_in": true,
          "name": "Namy",
          "onlinewebId": "123",
          "permissions": 5,
        },
      },
    },
    "ENABLE_VOTING",
  ],
]
`;

exports[`createIssue emits an error when it fails 1`] = `
Array [
  Array [
    Object {
      "request": Object {
        "headers": Object {
          "cookie": Object {
            "passwordHash": "hashy",
          },
        },
        "user": Object {
          "_id": "123",
          "completedRegistration": true,
          "genfors": "1",
          "logged_in": true,
          "name": "Namy",
          "onlinewebId": "123",
          "permissions": 5,
        },
      },
    },
    "issue",
    Object {},
    Object {
      "error": "Adding new question failed",
    },
  ],
]
`;
